Restructure to client/server, fix Vercel deployment config

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guestbook App</title>
+    <meta name="description" content="Sign our guestbook and leave a message for everyone to see." />
+    <title>Guestbook</title>
   </head>
   <body>
     <div id="root"></div>
